--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "version": "0.0.1",
   "author": "Takahito Nakano",
   "dependencies": {
-    "@ponko2/botkit-heroku-keepalive": "0.7.0",
-    "@ponko2/botkit-script-loader": "0.7.0",
-    "@ponko2/calendar": "0.1.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "botkit": "^0.1.1",
+    "@ponko2/botkit-heroku-keepalive": "0.7.2",
+    "@ponko2/botkit-script-loader": "0.7.2",
+    "@ponko2/calendar": "0.1.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
+    "botkit": "~0.1.2",
     "botkit-storage-redis": "^1.0.1",
     "cron": "^1.1.0",
     "node-dice-js": "^0.1.2"
   },
   "devDependencies": {
-    "eslint": "^2.6.0",
-    "eslint-config-ponko2": "^3.0.0"
+    "eslint": "^2.10.2",
+    "eslint-config-ponko2": "^3.3.1"
   },
   "engines": {
     "node": "^4.2.6",
