ESLintの設定を調整

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "eslint": "^2.10.2",
-    "eslint-config-ponko2": "^3.3.1"
+    "eslint-config-ponko2": "^3.3.1",
+    "eslint-plugin-node": "^1.4.0"
   },
   "engines": {
     "node": "^6.x",
