--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,26 @@
 {
   "extends": "ponko2",
+  "env": {
+    "browser": false,
+    "node": true,
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "script",
+    "ecmaFeatures": {
+      "impliedStrict": false
+    }
+  },
+  "plugins": ["node"],
   "rules": {
-    "no-console": 0
+    "node/no-deprecated-api": "error",
+    "node/no-missing-import": "error",
+    "node/no-missing-require": "error",
+    "node/no-unpublished-import": "error",
+    "node/no-unpublished-require": "error",
+    "node/no-unsupported-features": "error",
+    "node/process-exit-as-throw": "error",
+    "node/shebang": "error"
   }
 }
