--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "@ponko2/botkit-heroku-keepalive": "0.7.2",
     "@ponko2/botkit-script-loader": "0.7.2",
     "@ponko2/calendar": "0.1.2",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.9.0",
     "botkit": "~0.1.2",
     "botkit-storage-redis": "^1.0.1",
     "cron": "^1.1.0",
@@ -28,6 +26,6 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "start": "node app.js"
+    "start": "node index.js"
   }
 }
