--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "botkit": "~0.2.2",
     "botkit-storage-redis": "^1.0.1",
     "cron": "^1.1.0",
-    "node-dice-js": "^0.1.2"
+    "node-dice-js": "^0.1.2",
+    "punycode": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^3.0.0",
