mainのファイルをリネーム
`npm start` はデフォルトで `node server.js` を実行するため
ファイルを `server.js` に変更

https://docs.npmjs.com/cli/start

--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "npm": "^3.x"
   },
   "license": "MIT",
-  "main": "index.js",
+  "main": "server.js",
   "private": true,
   "scripts": {
-    "lint": "eslint .",
-    "start": "node index.js"
+    "lint": "eslint ."
   }
 }
