--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "@ponko2/botkit-heroku-keepalive": "0.9.0",
     "@ponko2/botkit-script-loader": "0.9.0",
     "@ponko2/calendar": "0.1.2",
-    "botkit": "~0.4.0",
-    "botkit-storage-redis": "^1.0.1",
-    "cron": "^1.1.1",
+    "botkit": "0.4.3",
+    "botkit-storage-redis": "^1.1.0",
+    "cron": "^1.2.1",
     "node-dice-js": "^0.1.2",
     "punycode": "^2.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.9.1",
+    "eslint": "^3.12.2",
     "eslint-config-ponko2": "^9.0.0",
-    "eslint-plugin-node": "^3.0.3"
+    "eslint-plugin-node": "^3.0.5"
   },
   "engines": {
     "node": "^6.x",
