--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.1",
   "author": "Takahito Nakano",
   "dependencies": {
-    "@ponko2/botkit-heroku-keepalive": "0.9.0",
-    "@ponko2/botkit-script-loader": "0.9.0",
-    "@ponko2/calendar": "0.1.2",
-    "botkit": "0.4.9",
+    "@ponko2/botkit-heroku-keepalive": "^0.9.0",
+    "@ponko2/botkit-script-loader": "^0.9.0",
+    "@ponko2/calendar": "^0.1.2",
+    "botkit": "~0.4.9",
     "botkit-storage-redis": "^1.1.0",
     "cron": "^1.2.1",
     "node-dice-js": "^0.1.2",
-    "punycode": "^2.0.1"
+    "punycode": "^2.1.0"
   },
   "devDependencies": {
-    "eslint": "^3.12.2",
+    "eslint": "^3.13.0",
     "eslint-config-ponko2": "^9.0.0",
     "eslint-plugin-node": "^3.0.5"
   },
